# commoner-probe

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXPLAINER.html  LICENSE  MANIFEST.in  Makefile  README.md  ROADMAP.md  SCOPE.md  TODO.md  WORKING.md  pyproject.toml
.ai/plans/: migrate-sansad-data-pulling.md  phase1-probe-split.md  pypi-release.md  researcher-ux-data-dict-and-corpus-api.md
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/: pm-profile.md
.github/workflows/: ci.yml  release.yml
commoner_probe/: __init__.py  __main__.py  answers.py  atr_linkage.py  attendance.py  base.py  bills.py  cli.py  committees.py  corpus.py  ddg.py  debates.py  doe.py  dspace.py  entities.py  evidence.py  extract_debates.py  http_client.py  indiacode.py  members.py  mospi.py  myneta.py  neva.py  neva_portals.py  neva_text.py  outsourcing.py  prs.py  questions_list.py  records.py  resolver.py  runlog.py  sansad.py  stats.py  textparse.py  topics.py  url_safety.py  vacancy.py  validate.py
commoner_probe/academia/: __init__.py  _common.py  ad_factory.py  institutions_registry.json  pdf_text.py  probe.py  registry.py
commoner_probe/academia/parsers/: __init__.py  anna_university.py  generic.py  iim_recruit.py  iit_gandhinagar.py  iit_hyderabad.py  iit_indore.py  iit_kanpur.py  iit_rolling.py  jnu.py  parser_utils.py  private_university.py
commoner_probe/budget/: __init__.py  probe.py
commoner_probe/csr/: __init__.py  compare.py  dpe.py  mca.py
commoner_probe/dmft/: __init__.py  mines.py
commoner_probe/example_topics/: __init__.py  home_affairs_starred.json  mines_dmft_pmkkky.json  mom_dmft_pmkkky.json  vacancy_disclosure.json
commoner_probe/gmb/: __init__.py  probe.py
commoner_probe/schemas/: __init__.py  answers_atr_response.schema.json  answers_dfg_recommendation.schema.json  answers_neva_qa_response.schema.json  answers_qa_response.schema.json  atr_linkage.schema.json  committee_members.schema.json  entities_bureaucratic_posting.schema.json  entities_committee_membership.schema.json  entities_ministerial_appointment.schema.json  entities_mp_membership.schema.json  entities_person.schema.json  manifest_academic_job.schema.json  manifest_attendance.schema.json  manifest_bill.schema.json  manifest_budget.schema.json  manifest_committee_report.schema.json  manifest_doe_pay_allowances.schema.json  manifest_dpe_csr.schema.json  manifest_floor_debate.schema.json  manifest_gmb_document.schema.json  manifest_indiacode.schema.json  manifest_legacy_dspace.schema.json  manifest_mca_csr.schema.json  manifest_mines_dmft.schema.json  manifest_ministry_ddg.schema.json  manifest_mospi.schema.json  manifest_myneta.schema.json  manifest_prs_mp_track.schema.json  manifest_qa.schema.json  manifest_question_list.schema.json  manifest_tabled_paper.schema.json  neva_district_row.schema.json  outsourcing_row.schema.json  question_list_row.schema.json  runs.schema.json  state_assembly_member.schema.json  state_assembly_paper_laid.schema.json  state_assembly_question.schema.json  state_assembly_question_unlisted.schema.json  (+2 more)
docs/: ENDPOINTS.md  GOV_SITE_PLATFORMS.md  INTEGRATION_SMOKE.md  RATIONALE.md  SCHEMAS.md  STATUS.md  TODO-finance-document-disclosure-adapters.md  neva-high-value-targets.md
examples/: usage.py
examples/corpora/committees-smoke/: README.md  manifest.jsonl
examples/topics/: affirmative_action.json  libraries.json  narcotics_substance.json
memory/: MEMORY.md  architecture-root-cause.md  changelog.md  project-identity.md  session-log.md
notes/: HANDOFF.md  STATE_OF_BRAIN.md  backflow-audit-ncrb-adsi.md  dmft-source-intake.md  dpe-csr-source-intake.md  source-family-map-csr-dmft.md
notes/handoffs/: handoff-2026-06-16-bd-toolchain-ssrf.md
notes/state-of-brains/: state-of-brain-2026-06-07-mca-csr-adapter.md  state-of-brain-2026-06-16-bd-toolchain-ssrf.md
sansad_crawler/: __init__.py  answers.py  base.py  cli.py  committees.py  corpus.py  entities.py  http_client.py  records.py  sansad.py  stats.py  textparse.py  topics.py  url_safety.py  validate.py
sansad_crawler/schemas/: __init__.py  answers_atr_response.schema.json  answers_qa_response.schema.json  entities_bureaucratic_posting.schema.json  entities_ministerial_appointment.schema.json  entities_mp_membership.schema.json  entities_person.schema.json  manifest_committee_report.schema.json  manifest_qa.schema.json  runs.schema.json
scripts/: check_leaks.py  pre-commit.sh
tests/: test_academia_parsers.py  test_academic_jobs.py  test_adapters.py  test_answers.py  test_atr_linkage.py  test_attendance.py  test_bills.py  test_budget.py  test_check_leaks.py  test_committees.py  test_corpus_loader.py  test_csr_compare.py  test_csr_mca.py  test_debates.py  test_dmft_mines.py  test_docs_sync.py  test_doe_pay_allowances.py  test_dspace.py  test_entities.py  test_evidence_dmft.py  test_gmb.py  test_http_client.py  test_indiacode.py  test_init_topic_cli.py  test_ministry_ddg.py  test_mospi.py  test_myneta.py  test_neva_text.py  test_outsourcing.py  test_prs.py  test_qa_structured_parse.py  test_questions_list.py  test_record_filter.py  test_report_type.py  test_resolve_askers.py  test_resolver.py  test_runlog.py  test_sansad_all.py  test_sansad_mpcode.py  test_sansad_tabled.py  (+10 more)
tests/fixtures/neva/: neva_garbled.txt  neva_permits.txt  neva_seizure.txt
