[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "sansad-crawler"
version = "0.2.0"
description = "Data-pulling crawler for Indian Parliament (Lok Sabha + Rajya Sabha) questions and standing committee reports."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Sreeram Ramasubramanian" }]
license = { text = "AGPL-3.0-or-later" }
keywords = [
  "parliament-of-india",
  "lok-sabha",
  "rajya-sabha",
  "parliamentary-questions",
  "standing-committees",
  "public-records",
  "civic-tech",
]
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Intended Audience :: Science/Research",
  "Topic :: Sociology",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
pdf = ["pdfminer.six>=20231228"]
http = ["requests>=2.31.0"]
pandas = ["pandas>=2.0"]
dev = ["jsonschema>=4.20", "pytest>=7", "ruff>=0.4"]
all = [
  "pdfminer.six>=20231228",
  "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/CommonerLLP/sansad-crawler"
Source = "https://github.com/CommonerLLP/sansad-crawler"
Issues = "https://github.com/CommonerLLP/sansad-crawler/issues"
Documentation = "https://github.com/CommonerLLP/sansad-crawler/blob/master/README.md"
Changelog = "https://github.com/CommonerLLP/sansad-crawler/blob/master/CHANGELOG.md"

[project.scripts]
sansad-crawl = "sansad_crawler.cli:main"

[tool.setuptools.packages.find]
include = ["sansad_crawler*"]
namespaces = false

[tool.setuptools.package-data]
"sansad_crawler.schemas" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
